--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TodoList</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="./styles/styles.css" rel="stylesheet" >
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="#heading">
@@ -18,7 +22,7 @@
             </div>
             <div class="add-item">
                 <form>
-                    <input type="text" placeholder="Enter TODO Item..." class="textField" />
+                    <input type="text" placeholder="Enter TODO Item..." class="textField" required />
                     &nbsp;
                     <button class="button">Add Item</button>
                 </form>
@@ -26,8 +30,8 @@
         </div>
     </section>
     <center>
-        <div class="todo-list">
-            <ul id="list">
+        <div class="container-fluid todo-list justify-content-center">
+            <ul id="list" class="row justify-content-center d-flex">
             </ul>
         </div>
     </center>
